[FIX] Ajout logo Francerelance + passage en scss et correctio alignement sur le mat-toolbar

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -7,6 +7,10 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.toolbar-container {
+  margin: 0 20px 20px 20px;
+}
 .content-container{
   margin: 20px;
 }
